# mlb-led-scoreboard

./: README.md  config.example.json  config_server.py
colors/: scoreboard.example.json
coordinates/: w128h32.example.json  w128h64.example.json  w192h64.example.json  w32h32.example.json  w64h32.example.json  w64h64.example.json
data/: game.py  schedule.py
data/config/: __init__.py
homeassistant/: README.md  config.example.json  pyproject.toml
homeassistant/src/mlb_led_scoreboard_homeassistant/: __init__.py  config.py  data.py  renderer.py
renderers/: main.py
renderers/games/: game.py
schemas/colors/: scoreboard.schema.json
schemas/coordinates/: _common.schema.json  w128h32.schema.json  w128h64.schema.json  w192h64.schema.json  w32h32.schema.json  w64h32.schema.json  w64h64.schema.json
tests/fixtures/colors/: scoreboard.json
